# attendance-system

./: API_DOCUMENTATION.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  COMPLETION_NOTICE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  REACT_MIGRATION_GUIDE.md  README.md  debug_records.py  frontend.html  index.html  pyproject.toml  test_apis.py  test_frontend.py  test_workflow.py
attendance_system/: database.py  main.py  models.py
attendance_system/routes/: attendance.py  employees.py  reports.py
backend/: clear_data.py  generate_data.py
backend/attendance_system/: database.py  enums.py  logger.py  main.py  models.py  utils.py
backend/attendance_system/routes/: attendance.py  employees.py  leave.py  reports.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css
frontend/src/components/: AttendanceOps.js  DailyReport.js  DepartmentStats.js  EmployeeList.js  PunctualityRanking.js
static/: frontend.html
